# JansGameFramework

./: .gitmodules  CMakeLists.txt  README.md  qhttpserver.cmake
client/: BaseClientNetworkManager.cpp  BaseClientNetworkManager.h  BaseResourceCacheManager.cpp  BaseResourceCacheManager.h  BaseWindow.cpp  BaseWindow.h  CMakeLists.txt  ClientLogging.cpp  ClientLogging.h
libqtlua/.svn/: wc.db
server/: BaseAIManager.cpp  BaseAIManager.h  BaseCacheManager.cpp  BaseCacheManager.h  BaseEntityManager.cpp  BaseEntityManager.h  BaseNetworkManager.cpp  BaseNetworkManager.h  BasePermissionManager.cpp  BasePermissionManager.h  BasePhysicsManager.cpp  BasePhysicsManager.h  BasePluginManager.cpp  BasePluginManager.h  BaseSaveManager.cpp  BaseSaveManager.h  CMakeLists.txt  Logging.cpp  Logging.h
